--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,11 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>com.machinepublishers</groupId>
+            <artifactId>jbrowserdriver</artifactId>
+            <version>1.0.0-RC1</version>
+        </dependency>
+        <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
             <version>3.11.0</version>
