--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>com.example.Main</mainClass>
+                    <mainClass>pl.pt.put.poznan.webscraper.Crawler</mainClass>
                 </configuration>
             </plugin>
         </plugins>
