--- a/pom.xml
+++ b/pom.xml
@@ -39,9 +39,9 @@
             <version>5.2.12.Final</version>
         </dependency>
         <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>6.4.0.jre8</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>2.2.3</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
